# cable_model

./: LICENSE  README.md
PINN/: 1D_harminic_oscillator.py  cable_dynamics.py  cable_model.py  plotter.py
PINN/test_scripts/: dio_de_dio.py  lorenz_odeint.py  msd_1dim.py  msd_2dim.py
cable_model_pkg/: CMakeLists.txt  package.xml
cable_model_pkg/data/: plot_data.py
cable_model_pkg/include/: RKDP45.cpp  RKDP45.hpp  cable_dynamics.cpp  cable_dynamics.hpp  cable_masses.cpp  cable_masses.hpp  cable_model.cpp  cable_model.hpp  colors.hpp  csv_exporter.cpp  csv_exporter.hpp
cable_model_pkg/include/cable_model/: sdf_builder.cpp  sdf_builder.hpp  sdf_cylinder.cpp  sdf_cylinder.hpp  sdf_sphere.hpp
cable_model_pkg/launch/: cable_spawn.launch
cable_model_pkg/scripts/: test_cable_poses.py
cable_model_pkg/src/: CablePlugin.cpp  CablePlugin.hpp  ModelCablePlugin.cpp  ModelCablePlugin.hpp  WorldCablePlugin.cpp  WorldCablePlugin.hpp
cable_model_pkg/srv/: GraspMsg.srv
cable_model_pkg/worlds/: cable_push.world
